# libclgeom

./: .gitignore  Cargo.toml  Makefile  README.md  cbindgen.toml
ctests/: test_context.c  test_main.c
src/: compile.rs  context.rs  errors.rs  ffi.rs  lib.rs  mesh.rs
src/opencl/: fn_inpl.c  fn_inpl_scalar.c
